H1 DIV AND FORM
se creo el div padre, y los div hijos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
   <main class="background-img">
+    <div class="central-div">
+      <div class="h1-div">
+        <h1>Learn to code by <br> watching others</h1>
+      </div>
+      <div class="form-div">
+          <p>hoca</p>
+      </div>
+    </div>
   </main>
 </body>
 </html>
