DIV P Y H1 INTENTO CENTRAR
se intento central el div h1 con el p, utilizando margin

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <main class="background-img">
     <div class="central-div">
       <div class="h1-div">
-        <h1>Learn to code by <br> watching others</h1>
+        <h1 id="h1-div-1">Learn to code by <br> watching others</h1>
+        <p id="p-div-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. A consequatur inventore nobis suscipit hic. Quaerat totam nam, unde voluptates quibusdam aliquid ex quo earum nostrum nobis iusto alias veniam dicta.</p>
       </div>
       <div class="form-div">
-          <p>hoca</p>
+        <p>hoca</p>
       </div>
     </div>
   </main>
